[project]
name = "monorepo-python-be"
version = "0.1.0"
description = "Monorepo with FastAPI backend and data management"
requires-python = ">=3.9"
packages = [
    { include = "backend", from = "." },
    { include = "data", from = "." },
    { include = "infra", from = "." },
]

[tool.pdm.group.backend]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
]

[tool.pdm.group.data]
dependencies = [
    "alembic>=1.11.0",
    "sqlalchemy>=2.0.0",
]

[tool.pdm.group.infra]
dependencies = [
    "pulumi>=3.0.0",
]

[tool.pdm.group.dev]
dependencies = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "pytest>=7.3.1",
]

[tool.pdm.scripts]
backend = { cmd = "uvicorn backend.src.main:app --reload" }
migrations = { cmd = "alembic -c data/alembic.ini upgrade head" }
infra = { cmd = "pulumi up --cwd infra" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"